v1.0.8
-------------------
! fixing strange problem with filmographies sometimes missing some years in the
  middle (just fixed by an ugly work-around - still not sure what is broken)

v1.0.7 (02.09.2008)
-------------------
+ imdb (movie) : added method releaseInfo()
* changed the way to get the big image - should now match better
! thumbnail was not returned when big image was missing, and big image did not
  always work correctly (image names changed?)
+ tests can now be restricted to either movie only, name only, or all (default)
+ imdb_person: added method to retrieve complete filmography (ignoring categories)
+ imdb_person: added method for category "actress"

v1.0.6 (11.06.2008)
-------------------
! preventing endless loops on connection problems (i.e. IMDB site offline)
! failed pages are no longer cached
+ added the attribute lastServerResponse (3-digit codes according to RFC2616)
  to the imdb_base class. You can check this to find out why there have been
  no results - e.g. "404" means the page was not found. "000" usually means
  the server could not be contacted (site down, network problems, ...)
+ test pages now allow to turn the cache on/off via the URL, applying
  "?cache=on" or "?cache=off" to it

v1.0.5 (03.06.2008)
-------------------
+ imdb_person: added methods to retrieve printed publications (pubprints()),
  biographical movies (pubmovies()), and "portrayed in" (pubportraits())
+ imdb_person: added method to retrieve interview list (interviews())
+ added overall results to the API test page
+ imdb_person: added methods for articles, pictorials and magazine covers
* class tests updated - results should be more precise now
! fixed a problem with redirected pages (e.g. movie 0068709)
! fixed a problem with movies having no year set (but "????" instead)

v1.0.4 (26.05.2008)
-------------------
! imdb_search: if maxresults was set to 0, no results have been returned
  (instead of unlimited)